--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,5 +1,5 @@
-<div th:fragment="header_admin">
-  <a class="home" href="/admin">
+<div th:fragment="header">
+  <a class="home" href="/home">
     <img src="../static/img/contoso.svg" alt="Главная"/>
   </a>
   <a href="/logout" class="logout">
@@ -7,6 +7,11 @@
   </a>
 </div>
 
-<div th:fragment="header_employee">
-
-</div>
+<!--<div th:fragment="header_home_">-->
+<!--  <a class="home" href="/employee">-->
+<!--    <img src="../static/img/contoso.svg" alt="Главная"/>-->
+<!--  </a>-->
+<!--  <a href="/logout" class="logout">-->
+<!--    <img src="../static/img/logout.svg" alt="Выйти"/>-->
+<!--  </a>-->
+<!--</div>-->
