--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -12,7 +12,7 @@
     <link type="text/css" rel="stylesheet" href="../static/css/table.css" th:href="@{/css/table.css}"/>
 </head>
 <body>
-<!--<header th:insert="blocks/header::header_admin"></header>-->
+<!--<header th:insert="blocks/header::header"></header>-->
 <header class="header">
     <a class="home" href="/admin">
         <img src="../static/img/contoso.svg" alt="Главная"/>
