--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 <div class="login_form">
 
     <p class="authorization">Авторизация</p>
-    <form action="/login">
+    <form action="/login" method="post">
         <div class="data">
             <input name="username" placeholder="email" required>
             <input name="password" placeholder="password" required>
