add parameter 'article' to Product fix front_end

--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="../static/img/feather.svg" type="image/png">
     <title>Contoso</title>
     <link type="text/css" rel="stylesheet" href="../static/css/common.css" th:href="@{/css/common.css}"/>
-    <link type="text/css" rel="stylesheet" href="../static/css/admin_header.css" th:href="@{/css/admin_header.css}"/>
+    <link type="text/css" rel="stylesheet" href="../static/css/header.css" th:href="@{/css/header.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/add_user.css" th:href="@{/css/add_user.css}"/>
 </head>
 <body>
