add technologist controller

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,9 +1,9 @@
 <div th:fragment="header">
   <a class="home" href="/home">
-    <img src="../static/img/contoso.svg" alt="Главная"/>
+    <img src="/img/contoso.svg" alt="Главная"/>
   </a>
   <a href="/logout" class="logout">
-    <img src="../static/img/logout.svg" alt="Выйти"/>
+    <img src="/img/logout.svg" alt="Выйти"/>
   </a>
 </div>
 
