--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -6,7 +6,7 @@
     height: 53px;
     left: 122px;
     top: 198px;
-    border: 1px solid #BDD9FF;
+    border: 1px solid #6D6DB3;
     border-radius: 31px;
 }
 
