--- a/src/main/resources/templates/add_user.html
+++ b/src/main/resources/templates/add_user.html
@@ -35,7 +35,7 @@
             <input name="email" placeholder="email" required><br/>
             <input name="phoneNumber" placeholder="Номер телефона" required><br/>
         </div>
-        <input class="btn" type="submit" value="Сохранить"/>
+        <input type="submit" value="Сохранить"/>
     </form>
 </div>
 </body>
