--- a/src/main/resources/templates/materials.html
+++ b/src/main/resources/templates/materials.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../static/css/header.css" th:href="@{/css/header.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/search.css" th:href="@{/css/search.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/table.css" th:href="@{/css/table.css}"/>
-    <link type="text/css" rel="stylesheet" href="../static/css/t_materials.css" th:href="@{/css/t_matetials.css}"/>
+    <link type="text/css" rel="stylesheet" href="../static/css/technologist.css" th:href="@{/css/technologist.css}"/>
 </head>
 <body>
 <header th:insert="blocks/header::header">
@@ -26,6 +26,7 @@
     <a class="btn_technologist" href="/products"><p>Товары</p></a>
     <a class="btn_technologist" href="/operations"><p>Операции</p></a>
 </nuv>
+<div class="list">
 <!--<table>-->
 <!--    <tr>-->
 <!--        <th>№</th>-->
@@ -52,5 +53,6 @@
 <!--        </tr>-->
 <!--    </div>-->
 <!--</table>-->
+</div>
 </body>
 </html>
