--- a/src/main/resources/templates/technologist.html
+++ b/src/main/resources/templates/technologist.html
@@ -9,8 +9,8 @@
     <link type="text/css" rel="stylesheet" href="../static/css/header.css" th:href="@{/css/header.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/search.css" th:href="@{/css/search.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/table.css" th:href="@{/css/table.css}"/>
-    <link type="text/css" rel="stylesheet" href="../static/css/technologist_products.css"
-          th:href="@{/css/technologist_products.css}"/>
+    <link type="text/css" rel="stylesheet" href="../static/css/technologist.css"
+          th:href="@{/css/technologist.css}"/>
 </head>
 <body>
 <header th:insert="blocks/header::header">
@@ -27,7 +27,7 @@
     <a class="btn_technologist" href="/materials"><p>Материалы</p></a>
     <a class="btn_technologist" href="/operations"><p>Операции</p></a>
 </nuv>
-<div class="products">
+<div class="list">
     <table>
         <tr>
             <th>№</th>
