--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -6,9 +6,7 @@ body {
 }
 
 
-.data input{
-    width: 397px;
-    height: 47px;
+.data input, select{
     margin-bottom: 14px;
     border: 1px solid #B5D4FF;
     border-radius: 9px;
@@ -38,7 +36,7 @@ body {
     border: 2px solid #090074;
 }
 
-.btn{
+input[type=submit]{
     background: #BDD9FF;
     border: 1px solid #B5D4FF;
     border-radius: 11px;
@@ -58,6 +56,23 @@ body {
 
     text-align: center;
     letter-spacing: -0.02em;
-
     color: #090074;
+}
+
+select{
+    text-align: start;
+    justify-content: center;
+    appearance: none;
+    background: url("/static/img/select.svg") no-repeat right 16px;
+}
+
+.btn{
+    position: fixed;
+    left: 1050px;
+    top: 672px;
+}
+
+.check {
+    width: 20px;
+    height: 19px;
 }
