--- a/src/main/resources/templates/operations.html
+++ b/src/main/resources/templates/operations.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="../static/css/header.css" th:href="@{/css/header.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/search.css" th:href="@{/css/search.css}"/>
     <link type="text/css" rel="stylesheet" href="../static/css/table.css" th:href="@{/css/table.css}"/>
-    <link type="text/css" rel="stylesheet" href="../static/css/t_operations.css" th:href="@{/css/t_operations.css}"/>
+    <link type="text/css" rel="stylesheet" href="../static/css/technologist.css" th:href="@{/css/technologist.css}"/>
 </head>
 <body>
 <header th:insert="blocks/header::header">
@@ -26,31 +26,33 @@
     <a class="btn_technologist" href="/products"><p>Товары</p></a>
     <a class="btn_technologist" href="/materials"><p>Материалы</p></a>
 </nuv>
-<!--<table>-->
-<!--    <tr>-->
-<!--        <th>№</th>-->
-<!--        <th>email</th>-->
-<!--        <th>ФИО</th>-->
-<!--        <th>Должность</th>-->
-<!--    </tr>-->
-<!--    <div th:each="product : ${products}">-->
-<!--        <tr>-->
-<!--            <td th:text="${product.id}"></td>-->
-<!--            <td th:text="${product.getModel()}"></td>-->
-<!--            <td th:text="${product.article}"></td>-->
-<!--            <td th:text="${product.costPrice}"></td>-->
-<!--            <td class="more">-->
-<!--                <a th:href="'/products/' + ${product.id}">-->
-<!--                    <img src="/img/edit.svg" alt="Редактировать"/>-->
-<!--                </a>-->
-<!--            </td>-->
-<!--            <td class="delete">-->
-<!--                <a th:href="'/products/' + ${product.id} + '/delete'">-->
-<!--                    <img src="/img/delete.svg" alt="Удалить"/>-->
-<!--                </a>-->
-<!--            </td>-->
-<!--        </tr>-->
-<!--    </div>-->
-<!--</table>-->
+<div class="list">
+    <!--<table>-->
+    <!--    <tr>-->
+    <!--        <th>№</th>-->
+    <!--        <th>email</th>-->
+    <!--        <th>ФИО</th>-->
+    <!--        <th>Должность</th>-->
+    <!--    </tr>-->
+    <!--    <div th:each="product : ${products}">-->
+    <!--        <tr>-->
+    <!--            <td th:text="${product.id}"></td>-->
+    <!--            <td th:text="${product.getModel()}"></td>-->
+    <!--            <td th:text="${product.article}"></td>-->
+    <!--            <td th:text="${product.costPrice}"></td>-->
+    <!--            <td class="more">-->
+    <!--                <a th:href="'/products/' + ${product.id}">-->
+    <!--                    <img src="/img/edit.svg" alt="Редактировать"/>-->
+    <!--                </a>-->
+    <!--            </td>-->
+    <!--            <td class="delete">-->
+    <!--                <a th:href="'/products/' + ${product.id} + '/delete'">-->
+    <!--                    <img src="/img/delete.svg" alt="Удалить"/>-->
+    <!--                </a>-->
+    <!--            </td>-->
+    <!--        </tr>-->
+    <!--    </div>-->
+    <!--</table>-->
+</div>
 </body>
 </html>
