--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,4 +1,9 @@
-
+table{
+    position: absolute;
+    width: 1216px;
+    left: 122px;
+    top: 315px;
+}
 .btn_add_user{
     box-sizing: border-box;
     position: absolute;
