--- a/src/main/resources/static/css/table.css
+++ b/src/main/resources/static/css/table.css
@@ -1,36 +1,35 @@
 table{
-    position: absolute;
-    width: 1216px;
-    left: 122px;
-    top: 315px;
     border-radius: 11px;
-    border: 1px solid #BDD9FF;
+    border: 1px solid #6D6DB3;
     text-align: center;
 
 }
 table.rounded-corners{
     border-collapse: collapse;
     border-radius: 11px;
-    border: 1px solid #BDD9FF;
+    border: 1px solid #6D6DB3;
 }
 tr:last-child{
     border-bottom: 0;
 }
+th:last-child, td:last-child{
+    border-right: 0;
+}
 
 th, td{
-    border-right: 1px solid #BDD9FF;
-    border-bottom: 1px solid #BDD9FF;
+    border-right: 1px solid #6D6DB3;
+    border-bottom: 1px solid #6D6DB3;
     font-family: 'Cormorant Garamond';
     font-style: normal;
     font-weight: 500;
     font-size: 32px;
     line-height: 40px;
     /* identical to box height, or 125% */
-
     letter-spacing: -0.02em;
 
     color: #6D6DB3;
 }
+
 
 .delete{
     border: 0;
