--- a/src/main/resources/templates/add_material.html
+++ b/src/main/resources/templates/add_material.html
@@ -15,12 +15,13 @@
 <form action="/materials/add" method="post" th:object="${material}" class="form">
     <div class="data">
         <p>Введите название материала:</p>
-        <input type="text" th:field="*{name}">
+        <input type="text" th:field="*{type}">
         <p>Мера измерения:</p>
         <select th:field="*{unit}" name="unit" class="unit">
-            <option value="кг">кг</option>
-            <option value="л">л</option>
-            <option value="штуки">штуки</option>
+            <option th:value="'кг'">кг</option>
+            <option th:value="'л'">л</option>
+            <option th:value="'м^3'">м^3</option>
+            <option th:value="'штуки'">штуки</option>
         </select>
         <p>Количество на складе:</p>
         <input type="number" min="0" step="0.1" th:field="*{stockQuantity}">
